@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Support for Django i18n ugettext_lazy (Ticket:496)
  - Added support for microseconds for datetime objects. Thanks to Derek Payton
    for the patch. (Ticket:490)
  - Added support for property types on SQLAlchemy mapped classes. (Ticket:491)
